tests/snapshots/snapshot__math.md@40.snap
---
source: tests/snapshot.rs
expression: canvas.plain_text()
---
 Math                                   
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 
                                        
 Inline math sits on the line: E = mc², 
 and α × β, and the subscripted aᵢⱼ     
 beside the flat a_{bc} that Unicode    
 cannot lower.                          
                                        
 Scripts that exist are raised: xⁿ⁺¹,   
 and e⁻ˣ raises the minus sign too.     
 Scripts that do not are written flat:  
 x^q.                                   
                                        
 Structures are linearised inline: a/b, 
 √x, and ∑ᵢ₌₁ⁿ i.                       
                                        
 Display math is drawn as box art:      
                                        
        ┌─────────                      
        │  2                            
 −b ± ‾╲│ b  − 4ac                      
 ─────────────────                      
        2a                              
                                        
 Currency is not math: it costs $5 and  
 $10 in total.
